avances en el estilo

--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karaoke pip & pop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bienvenidos al karaoke Pip & Pop</h1>
 
     <!-- FOrmulario para agregar canciones -->
 
-    <form id="song_form">
-        <label for="song_name">Nombre de la canción</label>
-        <input type="text" id="song_name" required>
-        <label for="artist_name">Nombre del artista</label>
-        <input type="text" id="artist_name" required>
-        <label for="url_song">Ingresa el enlace de la canción</label>
-        <input type="url" id="url_song" required>
-
-        <button type="submit">Agregar a la lista</button>
+    <form id="song_form"><br>
+        <label for="song_name">Nombre de la canción</label><br>
+        <input type="text" id="song_name" required><br><br>
+        <label for="artist_name">Nombre del artista</label></Br>
+        <input type="text" id="artist_name" required><br><br>
+        <label for="url_song">Ingresa el enlace de la canción</label><br>
+        <input type="url" id="url_song" required><br>
+        
+        <br>
+        <button type="submit"  id="form">Agregar a la lista</button><br>
     </form>
 
     <!-- Lista de canciones-->
