--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Bienvenidos al karaoke Pip & Pop</h1>
+    <img src="pip y pop.jpg" alt="imagen de pip y pop"><br><br>
 
     <!-- FOrmulario para agregar canciones -->
 
@@ -21,11 +22,13 @@
         
         <br>
         <button type="submit"  id="form">Agregar a la lista</button><br>
-    </form>
+    </form><br><br>
+<hr>
 
     <!-- Lista de canciones-->
     <h2>LIsta de reproducción</h2>
-    <ul id="play_list"></ul>
+    <ul id="play_list"></ul><br><br>
+    <footer>&copy; By Josué Hernández</footer>
 </body>
 <script src="main.js"></script>
 </html>
